Bug 401511 - src/libs/ui/kptdependencyeditor.cpp:1338]: (style) Same expression on both sides of '&&'.
Summary: src/libs/ui/kptdependencyeditor.cpp:1338]: (style) Same expression on both si...
Status: RESOLVED FIXED
Alias: None
Product: calligraplan
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.1.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dag Andersen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-11-28 17:41 UTC by dcb314
Modified: 2018-12-20 07:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.89
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dcb314 2018-11-28 17:41:51 UTC
SUMMARY

Source code is

                   if ( c1->ctype() == DependencyNodeItem::Finish && c1->ctype() == DependencyNodeItem::Finish ) {

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Christoph Feck 2018-12-19 23:24:37 UTC
Yep, the three cases need use both 'c1' and 'c2' consistently. But I am not sure if the order should be 'c1' 'c2' as in the switch block at line 1301, or swapped to 'c2' 'c1' because the preceeding 'if' seems to detect a reverse case.

I was about to mark as a junior job, but I guess only calligraplan developers can decide which way is correct.
Comment 2 Dag Andersen 2018-12-20 07:49:09 UTC
Git commit f7c10594066d561453a12cff81506ca0d49c9cba by Dag Andersen.
Committed on 20/12/2018 at 07:48.
Pushed by danders into branch 'master'.

Fix incorrect if statements in dependency editor
FIXED-IN: 3.1.89

M  +2    -2    src/libs/ui/kptdependencyeditor.cpp

https://commits.kde.org/calligraplan/f7c10594066d561453a12cff81506ca0d49c9cba