Fix incorrect if statements in dependency editor

BUG: 401511
FIXED-IN: 3.1.89